generated_classes/pythonParser.py
# Generated from python.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pythonParser ( Parser ):

    grammarFileName = "python.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\t'", "'='", "'if'", "'elif'", "'else'", 
                     "'not'", "'and'", "'or'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\\r\\n'", 
                     "<INVALID>", "'('", "')'", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "IF", "ELIF", 
                      "ELSE", "NOT", "AND", "OR", "BOOL", "ID", "LITERAL", 
                      "INT", "NUMBER", "LETTER", "STRING", "CHAR", "LOWERCASE", 
                      "UPPERCASE", "ARRAY", "OPSYMBOL", "WS", "NL", "US", 
                      "LPAREN", "RPAREN", "COLON", "COMPAREOP" ]

    RULE_s = 0
    RULE_branch = 1
    RULE_var = 2
    RULE_comparison = 3
    RULE_branchstatement = 4
    RULE_assign = 5
    RULE_operation = 6

    ruleNames =  [ "s", "branch", "var", "comparison", "branchstatement", 
                   "assign", "operation" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    IF=3
    ELIF=4
    ELSE=5
    NOT=6
    AND=7
    OR=8
    BOOL=9
    ID=10
    LITERAL=11
    INT=12
    NUMBER=13
    LETTER=14
    STRING=15
    CHAR=16
    LOWERCASE=17
    UPPERCASE=18
    ARRAY=19
    OPSYMBOL=20
    WS=21
    NL=22
    US=23
    LPAREN=24
    RPAREN=25
    COLON=26
    COMPAREOP=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def branch(self):
            return self.getTypedRuleContext(pythonParser.BranchContext,0)


        def s(self):
            return self.getTypedRuleContext(pythonParser.SContext,0)


        def var(self):
            return self.getTypedRuleContext(pythonParser.VarContext,0)


        def EOF(self):
            return self.getToken(pythonParser.EOF, 0)

        def getRuleIndex(self):
            return pythonParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = pythonParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_s)
        try:
            self.state = 21
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 14
                self.branch()
                self.state = 15
                self.s()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 17
                self.var()
                self.state = 18
                self.s()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 20
                self.match(pythonParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BranchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(pythonParser.COLON, 0)

        def NL(self):
            return self.getToken(pythonParser.NL, 0)

        def ELSE(self):
            return self.getToken(pythonParser.ELSE, 0)

        def branchstatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pythonParser.BranchstatementContext)
            else:
                return self.getTypedRuleContext(pythonParser.BranchstatementContext,i)


        def branch(self):
            return self.getTypedRuleContext(pythonParser.BranchContext,0)


        def comparison(self):
            return self.getTypedRuleContext(pythonParser.ComparisonContext,0)


        def IF(self):
            return self.getToken(pythonParser.IF, 0)

        def ELIF(self):
            return self.getToken(pythonParser.ELIF, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.WS)
            else:
                return self.getToken(pythonParser.WS, i)

        def getRuleIndex(self):
            return pythonParser.RULE_branch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBranch" ):
                listener.enterBranch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBranch" ):
                listener.exitBranch(self)




    def branch(self):

        localctx = pythonParser.BranchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_branch)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4]:
                self.state = 23
                _la = self._input.LA(1)
                if not(_la==3 or _la==4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 27
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 24
                        self.match(pythonParser.WS) 
                    self.state = 29
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 30
                self.comparison()
                pass
            elif token in [5]:
                self.state = 31
                self.match(pythonParser.ELSE)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 34
            self.match(pythonParser.COLON)
            self.state = 35
            self.match(pythonParser.NL)
            self.state = 37 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 36
                    self.branchstatement()

                else:
                    raise NoViableAltException(self)
                self.state = 39 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 41
                self.branch()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(pythonParser.ID, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.WS)
            else:
                return self.getToken(pythonParser.WS, i)

        def assign(self):
            return self.getTypedRuleContext(pythonParser.AssignContext,0)


        def operation(self):
            return self.getTypedRuleContext(pythonParser.OperationContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.NL)
            else:
                return self.getToken(pythonParser.NL, i)

        def getRuleIndex(self):
            return pythonParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = pythonParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(pythonParser.ID)
            self.state = 48
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 45
                    self.match(pythonParser.WS) 
                self.state = 50
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 53
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 51
                self.assign()

            elif la_ == 2:
                self.state = 52
                self.operation()


            self.state = 58
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 55
                    self.match(pythonParser.NL) 
                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.WS)
            else:
                return self.getToken(pythonParser.WS, i)

        def comparison(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pythonParser.ComparisonContext)
            else:
                return self.getTypedRuleContext(pythonParser.ComparisonContext,i)


        def LPAREN(self):
            return self.getToken(pythonParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(pythonParser.RPAREN, 0)

        def AND(self):
            return self.getToken(pythonParser.AND, 0)

        def OR(self):
            return self.getToken(pythonParser.OR, 0)

        def COMPAREOP(self):
            return self.getToken(pythonParser.COMPAREOP, 0)

        def var(self):
            return self.getTypedRuleContext(pythonParser.VarContext,0)


        def LITERAL(self):
            return self.getToken(pythonParser.LITERAL, 0)

        def BOOL(self):
            return self.getToken(pythonParser.BOOL, 0)

        def NOT(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.NOT)
            else:
                return self.getToken(pythonParser.NOT, i)

        def getRuleIndex(self):
            return pythonParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)




    def comparison(self):

        localctx = pythonParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.state = 61
                self.match(pythonParser.LPAREN)
                self.state = 62
                self.comparison()
                self.state = 63
                self.match(pythonParser.RPAREN)
                pass
            elif token in [6, 9, 10, 11, 21]:
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 65
                    self.match(pythonParser.NOT)
                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==21:
                    self.state = 71
                    self.match(pythonParser.WS)
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 80
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [10]:
                    self.state = 77
                    self.var()
                    pass
                elif token in [11]:
                    self.state = 78
                    self.match(pythonParser.LITERAL)
                    pass
                elif token in [9]:
                    self.state = 79
                    self.match(pythonParser.BOOL)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            else:
                raise NoViableAltException(self)

            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 84
                    self.match(pythonParser.WS) 
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.state = 90
                self.match(pythonParser.COMPAREOP)
                self.state = 91
                self.comparison()
                pass
            elif token in [7, 8]:
                self.state = 92
                _la = self._input.LA(1)
                if not(_la==7 or _la==8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 93
                        self.match(pythonParser.WS) 
                    self.state = 98
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

                self.state = 99
                self.comparison()
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 100
                        self.match(pythonParser.WS) 
                    self.state = 105
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

                pass
            elif token in [21, 25, 26]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BranchstatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(pythonParser.VarContext,0)


        def branch(self):
            return self.getTypedRuleContext(pythonParser.BranchContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.NL)
            else:
                return self.getToken(pythonParser.NL, i)

        def getRuleIndex(self):
            return pythonParser.RULE_branchstatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBranchstatement" ):
                listener.enterBranchstatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBranchstatement" ):
                listener.exitBranchstatement(self)




    def branchstatement(self):

        localctx = pythonParser.BranchstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_branchstatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(pythonParser.T__0)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 109
                self.var()
                pass

            elif la_ == 2:
                self.state = 110
                self.branch()
                pass

            elif la_ == 3:
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==22:
                    self.state = 111
                    self.match(pythonParser.NL)
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(pythonParser.VarContext,0)


        def LITERAL(self):
            return self.getToken(pythonParser.LITERAL, 0)

        def operation(self):
            return self.getTypedRuleContext(pythonParser.OperationContext,0)


        def ARRAY(self):
            return self.getToken(pythonParser.ARRAY, 0)

        def BOOL(self):
            return self.getToken(pythonParser.BOOL, 0)

        def OPSYMBOL(self):
            return self.getToken(pythonParser.OPSYMBOL, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.WS)
            else:
                return self.getToken(pythonParser.WS, i)

        def assign(self):
            return self.getTypedRuleContext(pythonParser.AssignContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.NL)
            else:
                return self.getToken(pythonParser.NL, i)

        def getRuleIndex(self):
            return pythonParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = pythonParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 119
                self.match(pythonParser.OPSYMBOL)


            self.state = 122
            self.match(pythonParser.T__1)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 123
                self.match(pythonParser.WS)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.state = 129
                self.var()
                pass

            elif la_ == 2:
                self.state = 130
                self.match(pythonParser.LITERAL)
                pass

            elif la_ == 3:
                self.state = 131
                self.operation()
                pass

            elif la_ == 4:
                self.state = 132
                self.match(pythonParser.ARRAY)
                pass

            elif la_ == 5:
                self.state = 133
                self.match(pythonParser.BOOL)
                pass


            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                self.state = 136
                self.assign()


            self.state = 142
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,22,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 139
                    self.match(pythonParser.NL) 
                self.state = 144
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,22,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.LITERAL)
            else:
                return self.getToken(pythonParser.LITERAL, i)

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pythonParser.VarContext)
            else:
                return self.getTypedRuleContext(pythonParser.VarContext,i)


        def OPSYMBOL(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.OPSYMBOL)
            else:
                return self.getToken(pythonParser.OPSYMBOL, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(pythonParser.WS)
            else:
                return self.getToken(pythonParser.WS, i)

        def getRuleIndex(self):
            return pythonParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)




    def operation(self):

        localctx = pythonParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_operation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.state = 145
                self.match(pythonParser.LITERAL)
                pass
            elif token in [10]:
                self.state = 146
                self.var()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 171
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,28,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 152
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==21:
                        self.state = 149
                        self.match(pythonParser.WS)
                        self.state = 154
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 155
                    self.match(pythonParser.OPSYMBOL)
                    self.state = 157
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==2:
                        self.state = 156
                        self.match(pythonParser.T__1)


                    self.state = 162
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==21:
                        self.state = 159
                        self.match(pythonParser.WS)
                        self.state = 164
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 167
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [11]:
                        self.state = 165
                        self.match(pythonParser.LITERAL)
                        pass
                    elif token in [10]:
                        self.state = 166
                        self.var()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 173
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,28,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





